# streamlit_gen_app

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/myai/config/: settings.yaml
src/myai/interface/: gui.py
src/myai/models/: chatbot.py  model.py
src/myai/utils/: config_reader.py
